demos/12-lesson/nginx-ingress-ip.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: nginx-static-ip
spec:
  backend:
    serviceName: nginx
    servicePort: 80
